feat: Implement tiered plan features - analytics, forecasting, AI optimization

--- a/frontend/register.html
+++ b/frontend/register.html
@@ -158,7 +158,7 @@
         </div>
 
         <h1>Start Your Free Trial</h1>
-        <p class="subtitle">No credit card required • 14 days free</p>
+        <p class="subtitle">14 days free trial</p>
 
         <div id="error-message" class="error-message"></div>
         <div id="success-message" class="success-message"></div>
