--- a/frontend/index.html
+++ b/frontend/index.html
@@ -95,36 +95,99 @@
                     <div class="feature-icon">🌍</div>
                     <h3>Global Fulfillment</h3>
                     <p>Optimize your logistics across 150+ countries with intelligent routing and cost management.</p>
+                    <a href="#global-fulfillment" class="feature-link">Learn more →</a>
                 </div>
 
                 <div class="feature-card">
                     <div class="feature-icon">📊</div>
                     <h3>Real-Time Analytics</h3>
                     <p>Track sales, inventory, and performance metrics in one beautiful dashboard.</p>
+                    <a href="#analytics" class="feature-link">Learn more →</a>
                 </div>
 
                 <div class="feature-card">
                     <div class="feature-icon">🚀</div>
                     <h3>Automated Inventory</h3>
                     <p>Never run out of stock. AI-powered predictions keep your inventory optimized.</p>
+                    <a href="#inventory" class="feature-link">Learn more →</a>
                 </div>
 
                 <div class="feature-card">
                     <div class="feature-icon">💰</div>
                     <h3>Revenue Tracking</h3>
                     <p>Understand your profit margins, fees, and cash flow with detailed financial reports.</p>
+                    <a href="#revenue" class="feature-link">Learn more →</a>
                 </div>
 
                 <div class="feature-card">
                     <div class="feature-icon">🎯</div>
                     <h3>Market Expansion</h3>
                     <p>Discover new markets with data-driven insights and expansion recommendations.</p>
+                    <a href="#market-expansion" class="feature-link">Learn more →</a>
                 </div>
 
                 <div class="feature-card">
                     <div class="feature-icon">📦</div>
                     <h3>Multi-Channel Integration</h3>
                     <p>Manage Amazon, eBay, Shopify, and more—all from one platform.</p>
+                    <a href="#integrations" class="feature-link">Learn more →</a>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- About Section -->
+    <section id="about" class="about-section">
+        <div class="container">
+            <div class="section-header">
+                <h2>About AmazonReach</h2>
+                <p>Empowering Amazon sellers to scale globally</p>
+            </div>
+
+            <div class="about-content">
+                <div class="about-text">
+                    <h3>Our Mission</h3>
+                    <p>
+                        We believe every Amazon seller deserves the tools and insights to compete globally.
+                        AmazonReach was built to simplify the complexity of international e-commerce,
+                        making it accessible for businesses of all sizes.
+                    </p>
+
+                    <h3>What We Do</h3>
+                    <p>
+                        Our platform combines powerful analytics, AI-driven inventory management, and
+                        automated workflows to help you focus on what matters: growing your business.
+                        From small startups to established enterprises, we provide the infrastructure
+                        you need to scale.
+                    </p>
+
+                    <h3>Why Choose Us</h3>
+                    <ul class="about-list">
+                        <li>✓ <strong>AI-Powered Automation</strong>: Let our AI handle routine tasks</li>
+                        <li>✓ <strong>Global Reach</strong>: Sell in 150+ countries effortlessly</li>
+                        <li>✓ <strong>Real-Time Insights</strong>: Make data-driven decisions</li>
+                        <li>✓ <strong>Expert Support</strong>: Get help when you need it</li>
+                        <li>✓ <strong>Transparent Pricing</strong>: No hidden fees, clear tiers</li>
+                    </ul>
+                </div>
+
+                <div class="about-stats">
+                    <div class="stat-box">
+                        <div class="stat-number">2,500+</div>
+                        <div class="stat-label">Active Sellers</div>
+                    </div>
+                    <div class="stat-box">
+                        <div class="stat-number">$50M+</div>
+                        <div class="stat-label">Revenue Managed</div>
+                    </div>
+                    <div class="stat-box">
+                        <div class="stat-number">150+</div>
+                        <div class="stat-label">Countries</div>
+                    </div>
+                    <div class="stat-box">
+                        <div class="stat-number">99.9%</div>
+                        <div class="stat-label">Uptime</div>
+                    </div>
                 </div>
             </div>
         </div>
