fix: Update asset and navigation paths for Cloudflare Pages deployment
- Changed CSS/JS paths from /frontend/ to /
- Updated login/register links
- Fixed all navigation hrefs for proper routing

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -14,7 +14,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800;900&display=swap"
         rel="stylesheet">
 
-    <link rel="stylesheet" href="/frontend/styles.css">
+    <link rel="stylesheet" href="/styles.css">
 </head>
 
 <body>
@@ -29,8 +29,8 @@
                 <a href="#features">Features</a>
                 <a href="#pricing">Pricing</a>
                 <a href="#about">About</a>
-                <a href="/frontend/login.html" class="nav-login">Sign In</a>
-                <a href="/frontend/register.html" class="nav-cta">Start Free Trial</a>
+                <a href="/login.html" class="nav-login">Sign In</a>
+                <a href="/register.html" class="nav-cta">Start Free Trial</a>
             </div>
         </div>
     </nav>
@@ -53,7 +53,7 @@
                     inventory management, and revenue analytics—so you can focus on growth.
                 </p>
                 <div class="hero-cta">
-                    <a href="/frontend/register.html" class="btn btn-primary">
+                    <a href="/register.html" class="btn btn-primary">
                         Start Free Trial
                         <svg width="20" height="20" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                             <path d="M13 7l5 5m0 0l-5 5m5-5H6" stroke-width="2" stroke-linecap="round"
@@ -217,7 +217,7 @@
                         <li>✓ Email support</li>
                         <li>✓ 1 marketplace integration</li>
                     </ul>
-                    <a href="/frontend/register.html" class="btn btn-outline">Get Started</a>
+                    <a href="/register.html" class="btn btn-outline">Get Started</a>
                 </div>
 
                 <div class="pricing-card featured">
@@ -237,7 +237,7 @@
                         <li>✓ Unlimited integrations</li>
                         <li>✓ AI inventory optimization</li>
                     </ul>
-                    <a href="/frontend/register.html" class="btn btn-primary">Get Started</a>
+                    <a href="/register.html" class="btn btn-primary">Get Started</a>
                 </div>
 
                 <div class="pricing-card">
@@ -267,7 +267,7 @@
                 <h2>Ready to Scale Your Amazon Business?</h2>
                 <p>Join thousands of sellers growing their business with AmazonReach</p>
                 <div class="cta-buttons">
-                    <a href="/frontend/register.html" class="btn btn-primary btn-lg">
+                    <a href="/register.html" class="btn btn-primary btn-lg">
                         Start Free 14-Day Trial
                     </a>
                 </div>
@@ -393,7 +393,7 @@
         </div>
     </footer>
 
-    <script src="/frontend/script.js"></script>
+    <script src="/script.js"></script>
 </body>
 
 </html>
