--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,9 +4,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AmazonReach - Scale Your Amazon Business Globally</title>
+    <title>AmazonReach - Global Amazon Fulfillment & Analytics for K-Brands</title>
     <meta name="description"
-        content="From local seller to international success. We handle global fulfillment, inventory management, and revenue analytics for Amazon sellers.">
+        content="Scale your K-brand globally with AmazonReach. We provide comprehensive Amazon Expansion services, Global Fulfillment, and a powerful SaaS solution for analytics and inventory management.">
+    <meta name="keywords" content="Amazon Expansion, K-brand, SaaS solution, Global Fulfillment, Amazon Analytics, Korean Sellers, Cross-border E-commerce">
+
+    <!-- GEO Optimization -->
+    <link rel="alternate" hreflang="en-US" href="https://amazonreach.pages.dev/" />
+    <link rel="alternate" hreflang="x-default" href="https://amazonreach.pages.dev/" />
 
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -15,6 +20,7 @@
         rel="stylesheet">
 
     <link rel="stylesheet" href="/styles.css">
+    <link rel="stylesheet" href="modal.css">
 </head>
 
 <body>
@@ -40,10 +46,7 @@
         <div class="hero-background"></div>
         <div class="hero-container">
             <div class="hero-content">
-                <div class="hero-badge">
-                    <span>🌍</span>
-                    <span>Trusted by 2,500+ Amazon Sellers</span>
-                </div>
+
                 <h1 class="hero-title">
                     Scale Your Amazon Business
                     <span class="gradient-text">Globally</span>
@@ -95,42 +98,42 @@
                     <div class="feature-icon">🌍</div>
                     <h3>Global Fulfillment</h3>
                     <p>Optimize your logistics across 150+ countries with intelligent routing and cost management.</p>
-                    <a href="#global-fulfillment" class="feature-link">Learn more →</a>
+                    <a href="/features/global-fulfillment.html" class="feature-link">Learn more →</a>
                 </div>
 
                 <div class="feature-card">
                     <div class="feature-icon">📊</div>
                     <h3>Real-Time Analytics</h3>
                     <p>Track sales, inventory, and performance metrics in one beautiful dashboard.</p>
-                    <a href="#analytics" class="feature-link">Learn more →</a>
+                    <a href="/features/analytics.html" class="feature-link">Learn more →</a>
                 </div>
 
                 <div class="feature-card">
                     <div class="feature-icon">🚀</div>
                     <h3>Automated Inventory</h3>
                     <p>Never run out of stock. AI-powered predictions keep your inventory optimized.</p>
-                    <a href="#inventory" class="feature-link">Learn more →</a>
+                    <a href="/features/inventory.html" class="feature-link">Learn more →</a>
                 </div>
 
                 <div class="feature-card">
                     <div class="feature-icon">💰</div>
                     <h3>Revenue Tracking</h3>
                     <p>Understand your profit margins, fees, and cash flow with detailed financial reports.</p>
-                    <a href="#revenue" class="feature-link">Learn more →</a>
+                    <a href="/features/revenue.html" class="feature-link">Learn more →</a>
                 </div>
 
                 <div class="feature-card">
                     <div class="feature-icon">🎯</div>
                     <h3>Market Expansion</h3>
                     <p>Discover new markets with data-driven insights and expansion recommendations.</p>
-                    <a href="#market-expansion" class="feature-link">Learn more →</a>
+                    <a href="/features/market-expansion.html" class="feature-link">Learn more →</a>
                 </div>
 
                 <div class="feature-card">
                     <div class="feature-icon">📦</div>
                     <h3>Multi-Channel Integration</h3>
                     <p>Manage Amazon, eBay, Shopify, and more—all from one platform.</p>
-                    <a href="#integrations" class="feature-link">Learn more →</a>
+                    <a href="/features/integrations.html" class="feature-link">Learn more →</a>
                 </div>
             </div>
         </div>
@@ -172,10 +175,7 @@
                 </div>
 
                 <div class="about-stats">
-                    <div class="stat-box">
-                        <div class="stat-number">2,500+</div>
-                        <div class="stat-label">Active Sellers</div>
-                    </div>
+
                     <div class="stat-box">
                         <div class="stat-number">$50M+</div>
                         <div class="stat-label">Revenue Managed</div>
@@ -378,7 +378,7 @@
                         <h4>Company</h4>
                         <a href="#about">About</a>
                         <a href="#contact">Contact</a>
-                        <a href="#careers">Careers</a>
+
                     </div>
                     <div class="footer-column">
                         <h4>Legal</h4>
@@ -393,7 +393,22 @@
         </div>
     </footer>
 
-    <script src="/script.js"></script>
+    <!-- Demo Modal -->
+    <div id="demo-modal" class="modal">
+        <div class="modal-content">
+            <span class="close-modal">&times;</span>
+            <div class="video-container">
+                <iframe id="demo-video" width="100%" height="100%"
+                    src="https://www.youtube.com/embed/dQw4w9WgXcQ?enablejsapi=1" title="AmazonReach Demo"
+                    frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                    allowfullscreen></iframe>
+            </div>
+        </div>
+    </div>
+
+    <script src="script.js"></script>
+    <script src="modal.js"></script>
 </body>
 
 </html>
