Fix: Move dashboard into frontend folder for correct deployment

--- a/frontend/login.html
+++ b/frontend/login.html
@@ -191,9 +191,7 @@
             <button type="submit" class="btn">Sign In</button>
         </form>
 
-        <div class="register-link">
-            Don't have an account? <a href="/frontend/register.html">Start free trial</a>
-        </div>
+        Don't have an account? <a href="/register.html">Start free trial</a>
     </div>
 
     <script>
