Fix: UI layout, dashboard auth fetch, and settings connection fetch

--- a/frontend/login.html
+++ b/frontend/login.html
@@ -191,7 +191,9 @@
             <button type="submit" class="btn">Sign In</button>
         </form>
 
-        Don't have an account? <a href="/register.html">Start free trial</a>
+        <div class="register-link">
+            Don't have an account? <a href="/register.html">Start free trial</a>
+        </div>
     </div>
 
     <script>
