--- a/frontend/dashboard/settings.html
+++ b/frontend/dashboard/settings.html
@@ -101,7 +101,7 @@
 
                     try {
                         console.log('Fetching auth URL...');
-                        const response = await fetch('/api/amazon/auth', { credentials: 'include' });
+                        const response = await fetch(`${BACKEND_URL}/api/amazon/auth`, { credentials: 'include' });
                         const data = await response.json();
 
                         console.log('Response:', data);
