Fix: Register page login link

--- a/frontend/register.html
+++ b/frontend/register.html
@@ -226,7 +226,7 @@
         </form>
 
         <div class="login-link">
-            Already have an account? <a href="/frontend/login.html">Sign in</a>
+            Already have an account? <a href="/login.html">Sign in</a>
         </div>
     </div>
 
