Add Google Site Verification meta tag for SEO

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -7,7 +7,10 @@
     <title>AmazonReach - Global Amazon Fulfillment & Analytics for K-Brands</title>
     <meta name="description"
         content="Scale your K-brand globally with AmazonReach. We provide comprehensive Amazon Expansion services, Global Fulfillment, and a powerful SaaS solution for analytics and inventory management.">
-    <meta name="keywords" content="Amazon Expansion, K-brand, SaaS solution, Global Fulfillment, Amazon Analytics, Korean Sellers, Cross-border E-commerce">
+    <meta name="keywords"
+        content="Amazon Expansion, K-brand, SaaS solution, Global Fulfillment, Amazon Analytics, Korean Sellers, Cross-border E-commerce">
+    <meta name="google-site-verification" content="LQ1LGdLdmc_1PjTxbMwkXtw9JW-jQpIqPyCk6q5rFe4" />
+
 
     <!-- GEO Optimization -->
     <link rel="alternate" hreflang="en-US" href="https://amazonreach.pages.dev/" />
