Add Blog section and update navigation

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -37,6 +37,7 @@
             <div class="nav-links">
                 <a href="#features">Features</a>
                 <a href="#pricing">Pricing</a>
+                <a href="/blog/">Blog</a>
                 <a href="#about">About</a>
                 <a href="/login.html" class="nav-login">Sign In</a>
                 <a href="/register.html" class="nav-cta">Start Free Trial</a>
