--- a/frontend/index.html
+++ b/frontend/index.html
@@ -23,7 +23,18 @@
         rel="stylesheet">
 
     <link rel="stylesheet" href="/styles.css">
+
     <link rel="stylesheet" href="modal.css">
+
+    <!-- Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-XXXXXXXXXX"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+
+        gtag('config', 'G-XXXXXXXXXX');
+    </script>
 </head>
 
 <body>
@@ -38,6 +49,7 @@
                 <a href="#features">Features</a>
                 <a href="#pricing">Pricing</a>
                 <a href="/blog/">Blog</a>
+                <a href="/reviews.html">Reviews</a>
                 <a href="#about">About</a>
                 <a href="/login.html" class="nav-login">Sign In</a>
                 <a href="/register.html" class="nav-cta">Start Free Trial</a>
