Refine reviews page with Unsplash images & international profiles, update GA ID to G-D7F4VJGJM3

--- a/frontend/reviews.html
+++ b/frontend/reviews.html
@@ -13,13 +13,13 @@
         rel="stylesheet">
     <link rel="stylesheet" href="/styles.css">
     <!-- Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-XXXXXXXXXX"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-D7F4VJGJM3"></script>
     <script>
         window.dataLayer = window.dataLayer || [];
         function gtag() { dataLayer.push(arguments); }
         gtag('js', new Date());
 
-        gtag('config', 'G-XXXXXXXXXX');
+        gtag('config', 'G-D7F4VJGJM3');
     </script>
     <style>
         .reviews-header {
@@ -199,10 +199,8 @@
             <!-- Review 1 -->
             <div class="review-card">
                 <div class="review-image-container">
-                    <!-- Symbolic colored background for privacy focus -->
-                    <div
-                        style="width:100%; height:100%; background: linear-gradient(45deg, #ff9a9e 0%, #fad0c4 99%, #fad0c4 100%);">
-                    </div>
+                    <img src="https://images.unsplash.com/photo-1573496359142-b8d87734a5a2?auto=format&fit=crop&q=80&w=800"
+                        alt="Office Meeting" class="review-image">
                     <div class="privacy-badge">Product Image Protected</div>
                 </div>
                 <div class="review-content">
@@ -210,10 +208,10 @@
                     <p class="review-text">"We were struggling with FBA fees killing our margins. AmazonReach's audit
                         tool found $4,000 in monthly savings instantly. Our US sales have tripled."</p>
                     <div class="reviewer-info">
-                        <div class="reviewer-avatar">K</div>
+                        <div class="reviewer-avatar">S</div>
                         <div class="reviewer-details">
-                            <h4>J. Kim</h4>
-                            <p>CEO, K-Beauty Skincare Brand</p>
+                            <h4>Sarah Jenkins</h4>
+                            <p>CEO, GlowUp Skincare (USA)</p>
                         </div>
                     </div>
                 </div>
@@ -222,22 +220,19 @@
             <!-- Review 2 -->
             <div class="review-card">
                 <div class="review-image-container">
-                    <div
-                        style="width:100%; height:100%; background: linear-gradient(120deg, #84fab0 0%, #8fd3f4 100%);">
-                    </div>
+                    <img src="https://images.unsplash.com/photo-1664575602276-acd073f104c1?auto=format&fit=crop&q=80&w=800"
+                        alt="Warehouse Data" class="review-image">
                     <div class="privacy-badge">Product Image Protected</div>
                 </div>
                 <div class="review-content">
                     <div class="review-metric">No More Stockouts</div>
                     <p class="review-text">"The AI inventory prediction is scary accurate. It told us to restock 3 weeks
                         before we usually do, and we avoided a major stockout during Prime Day."</p>
-                    <div class="reviewer-details">
-                        <div class="reviewer-info">
-                            <div class="reviewer-avatar">L</div>
-                            <div class="reviewer-details">
-                                <h4>S. Lee</h4>
-                                <p>Director, Home & Living Brand</p>
-                            </div>
+                    <div class="reviewer-info">
+                        <div class="reviewer-avatar">D</div>
+                        <div class="reviewer-details">
+                            <h4>David Chen</h4>
+                            <p>Director, Chen Home Goods (Taiwan)</p>
                         </div>
                     </div>
                 </div>
@@ -246,20 +241,19 @@
             <!-- Review 3 -->
             <div class="review-card">
                 <div class="review-image-container">
-                    <div
-                        style="width:100%; height:100%; background: linear-gradient(to top, #cfd9df 0%, #e2ebf0 100%);">
-                    </div>
-                    <div class="privacy-badge">Product Image Protected</div>
+                    <img src="https://images.unsplash.com/photo-1556761175-5973dc0f32e7?auto=format&fit=crop&q=80&w=800"
+                        alt="Team Success" class="review-image">
+                    <div class="privacy-badge">Listing Optimized</div>
                 </div>
                 <div class="review-content">
                     <div class="review-metric">Ranked #1 in Category</div>
                     <p class="review-text">"Localization is key. We used the transcreation service to rewrite our
                         listings, and our conversion rate went from 2% to 12% in a month."</p>
                     <div class="reviewer-info">
-                        <div class="reviewer-avatar">P</div>
+                        <div class="reviewer-avatar">E</div>
                         <div class="reviewer-details">
-                            <h4>M. Park</h4>
-                            <p>Founder, Fashion Accessories</p>
+                            <h4>Elena Rodriguez</h4>
+                            <p>Founder, Bella Accessories (Spain)</p>
                         </div>
                     </div>
                 </div>
@@ -268,20 +262,19 @@
             <!-- Review 4 -->
             <div class="review-card">
                 <div class="review-image-container">
-                    <div
-                        style="width:100%; height:100%; background: linear-gradient(to right, #4facfe 0%, #00f2fe 100%);">
-                    </div>
-                    <div class="privacy-badge">Product Image Protected</div>
+                    <img src="https://images.unsplash.com/photo-1542744173-8e7e53415bb0?auto=format&fit=crop&q=80&w=800"
+                        alt="Global Expansion" class="review-image">
+                    <div class="privacy-badge">Market Data Protected</div>
                 </div>
                 <div class="review-content">
                     <div class="review-metric">Expanded to Japan</div>
                     <p class="review-text">"We only sold in the US. The market expansion tool showed us high demand in
                         Japan. We launched last month and it's already 20% of our revenue."</p>
                     <div class="reviewer-info">
-                        <div class="reviewer-avatar">C</div>
+                        <div class="reviewer-avatar">K</div>
                         <div class="reviewer-details">
-                            <h4>H. Choi</h4>
-                            <p>VP of Sales, Electronics Brand</p>
+                            <h4>K. Tanaka</h4>
+                            <p>VP of Sales, TechGadget (Japan)</p>
                         </div>
                     </div>
                 </div>
