--- a/frontend/index.html
+++ b/frontend/index.html
@@ -27,13 +27,13 @@
     <link rel="stylesheet" href="modal.css">
 
     <!-- Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-XXXXXXXXXX"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-D7F4VJGJM3"></script>
     <script>
         window.dataLayer = window.dataLayer || [];
         function gtag() { dataLayer.push(arguments); }
         gtag('js', new Date());
 
-        gtag('config', 'G-XXXXXXXXXX');
+        gtag('config', 'G-D7F4VJGJM3');
     </script>
 </head>
 
