--- a/frontend/chat.html
+++ b/frontend/chat.html
@@ -283,7 +283,7 @@
                 }
 
                 // Call AI chat API
-                const BACKEND_URL = window.location.hostname === 'localhost'
+                const BACKEND_URL = window.location.hostname === 'localhost' || window.location.hostname === '127.0.0.1'
                     ? 'http://localhost:3000'
                     : 'https://amazonreach-production.up.railway.app';
                 const response = await fetch(`${BACKEND_URL}/api/ai/chat`, {
