--- a/frontend/login.html
+++ b/frontend/login.html
@@ -197,7 +197,7 @@
     </div>
 
     <script>
-        const BACKEND_URL = window.location.hostname === 'localhost'
+        const BACKEND_URL = window.location.hostname === 'localhost' || window.location.hostname === '127.0.0.1'
             ? 'http://localhost:3000'
             : 'https://amazonreach-production.up.railway.app';
 
