--- a/frontend/dashboard/dashboard.html
+++ b/frontend/dashboard/dashboard.html
@@ -13,7 +13,7 @@
     <!-- Sidebar -->
     <aside class="sidebar">
         <div class="logo">
-            <a href="https://nextgate.com"
+            <a href="https://amazonreach.pages.dev"
                 style="text-decoration: none; color: inherit; display: flex; align-items: center; gap: 8px;">
                 <span>🚀</span> AmazonReach
             </a>
