--- a/frontend/dashboard/settings.html
+++ b/frontend/dashboard/settings.html
@@ -11,7 +11,7 @@
 <body>
     <aside class="sidebar">
         <div class="logo">
-            <a href="https://nextgate.com"
+            <a href="https://amazonreach.pages.dev"
                 style="text-decoration: none; color: inherit; display: flex; align-items: center; gap: 8px;">
                 <span>🚀</span> AmazonReach
             </a>
